[package]
name = "xmlinfoset"
version = "0.1.0"
authors = ["CrLF0710"]
edition = "2018"
license = "MIT OR APACHE-2.0"

# See more keys and their definitions at https://d  oc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlparser = "0.13.2"
repository = {git = "https://github.com/crlf0710/repository-rs"}
thiserror = "1.0.20"
